# mfgames-cil

./: .editorconfig  .gitignore  ChangeLog  License.txt  LocalTestRun.testrunconfig  Makefile.am  Makefile.in  MfGames.nuspec  MfGames.sln  MfGames.vsmdi  README  RELEASE.markdown  Resharper.xml  autogen.sh  configure  configure.in  doap.rdf  doap.xml  uncrustify.cfg  uncrustify.sh
Configuration/: Resharper.xml
MfGames/: MfGames.csproj  Severity.cs
MfGames.Input/: AssemblyInfo.cs.in  Chain.cs  ChainInputEventArgs.cs  ChainInputManager.cs  ChainLink.cs  InputEventArgs.cs  InputManager.cs  InputTokens.cs  MfGames.Input.csproj  TokenMappingDictionary.cs
MfGames.Input/Properties/: AssemblyInfo.cs
MfGames.Tools/: ITool.cs  MfGames.Tools.csproj  OptionalAttribute.cs  ParsingArgs.cs  PositionalAttribute.cs  ToolManager.cs
MfGames.Tools/Properties/: AssemblyInfo.cs
MfGames.Unstable/: MfGames.Unstable.csproj
MfGames.Unstable/Numerics/: INoise2.cs  PerlinNoise.cs
MfGames.Unstable/Properties/: AssemblyInfo.cs
MfGames.Utility/: AssemblyInfo.cs.in  AttributeTree.cs  AttributeTreeCollection.cs  AuditMessageArgs.cs  AuditSeverityHandler.cs  AuditTest.cs  Auditable.cs  ConfigStorage.cs  ConsoleLogger.cs  DiagnosticSink.cs  DiceFactory.cs  Entropy.cs  EulerRotation.cs  IDice.cs  ILogSink.cs  ISettingsStore.cs  InvalidPathException.cs  Log.cs  Logable.cs  MersenneRandom.cs  MfConvert.cs  MfGames.Utility.dll.build  MimeFilenameIdentifier.cs  NestedAuditable.cs  NodeRef.cs  NodeRefTest.cs  NotAbsolutePathException.cs  PositionalAttribute.cs  Quaternion.cs  Scanner.cs  SecondsCountdown.cs  SecondsGauge.cs  Settings.cs  Severity.cs  TestTimeZones.cs  TickArgs.cs  TickManager.cs  TimeZoneUtc.cs  ToolManager.cs  ToolTest.cs  (+13 more)
MfGames.Utility/Audit/: AuditMessageHandler.cs  AuditSeverityArgs.cs  IAuditable.cs
MfGames.Utility/Dice/: AdditionDice.cs  ConstantDice.cs  Dice.atg  DiceException.cs  Parser.cs  Parser.frame  RandomDice.cs  Scanner.frame  SubtractionDice.cs
MfGames.Utility/Log/: Logger.cs
MfGames.Utility/Math/: Matrix4D.cs  Vector2D.cs  Vector2F.cs  Vector2I.cs  Vector3D.cs  Vector3F.cs
MfGames.Utility/Random/: MersenneRandom.cs  WeightedSelector.cs
MfGames.Utility/Settings/: ISettings.cs
MfGames.Utility/Test/: AttributeTreeTest.cs  TestDice.cs  ToolTest.cs  UtilityTest.cs  VersionTest.cs
MfGames.Utility/Timezone/: TimeZoneUS.cs  TimeZones.cs
MfGames.Utility/Timing/: ITickable.cs  SecondsCountdown.cs  SecondsGauge.cs
MfGames.Utility/Tool/: ITool.cs  OptionalAttribute.cs  ParsingArgs.cs  UsageFormatter.cs
MfGames/Algorithms/: PerlinNoiseGenerator.cs
MfGames/Collections/: AttributeTree.cs  AttributeTreeCollection.cs  InvalidPathException.cs  NodeRef.cs  NotAbsolutePathException.cs  TypeChooser.cs  TypeDictionary.cs  ValueTree.cs  WeightedSelector.cs
MfGames/Dice/: AdditionDice.cs  ConstantDice.cs  DiceException.cs  DiceFactory.cs  IDice.cs  Parser.cs  RandomDice.cs  Scanner.cs  SubtractionDice.cs  TestDice.cs
MfGames/Drawing/: Color.cs
MfGames/Entropy/: AdditionDice.cs  ConstantDice.cs  DiceException.cs  DiceFactory.cs  IDice.cs  MersenneRandom.cs  MersenneTwister.cs  MersenneTwisterRandom.cs  Parser.cs  RandomDice.cs  RandomManager.cs  Scanner.cs  SubtractionDice.cs
MfGames/Extensions/: SystemInt32Extensions.cs  SystemObjectExtensions.cs  SystemReflectionMemberInfoExtensions.cs  SystemReflectionParameterInfoExtensions.cs
MfGames/Input/: Chain.cs  ChainInputEventArgs.cs  ChainInputManager.cs  ChainLink.cs  InputEventArgs.cs  InputManager.cs  InputTokens.cs  TokenMappingDictionary.cs
MfGames/Logging/: Audit.cs  AuditMessage.cs  AuditMessageArgs.cs  AuditMessageEventArgs.cs  AuditMessageHandler.cs  AuditMessageSet.cs  AuditSeverityArgs.cs  AuditSeverityEventArgs.cs  AuditSeverityHandler.cs  Auditable.cs  ConsoleLogger.cs  DiagnosticSink.cs  IAuditMessageCollection.cs  IAuditable.cs  ILogSink.cs  IReportingAuditable.cs  Log.cs  LogEventArgs.cs  Logable.cs  Logger.cs  NestedAuditable.cs  SeverityEventArgs.cs
MfGames/Numerics/: Calculator.cs  ExtendedMath.cs  ExtensionsInt32.cs  FractalBrownianMotion.cs  Fraction.cs  INoise2.cs  IRange1.cs  LinearRange1.cs  Math.cs  Mathematics.cs  PerlinNoise.cs  Point2.cs  Size2.cs
MfGames/Properties/: AssemblyInfo.cs
MfGames/Settings/: ConfigManager.cs  (+7 more)
Numerics/: Math.cs
SettingsEditor/: Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  SettingsEditor.csproj
UnitTests/: AttributeTreeTests.cs  AuditTests.cs  CalculatorTests.cs  ConfigManagerTests.cs  DiceTests.cs  FractionTests.cs  MfGamesUnitTests.csproj  NodeRefTests.cs  Point2Tests.cs  SettingsTest.cs  TimeZoneTest.cs  ToolTests.cs  UnitTests.csproj  UtilityTests.cs  VersionTests.cs
debian/: MAINTAINERS  changelog  control  copyright  docs  install  installcligac  libmfgames-utility1.3-cil.install  rules
docs/: MfGames.Utility.xml  docbook.xml  style.css
etc/: mfgames-input-3.0.pc.in  mfgames-utility-1.3.pc.in  mfgames-utility-1.pc.in  mfgames-utility-3.0.pc.in  mfgames-utility-log4net-1.0.pc.in  mfgames-utility-log4net-1.3.pc.in
mfgames-utility/: ToolCreateSettings.cs  ToolCreateSettings.xsl  UtilityTool.cs  mfgames-utility.exe.build
src/: AssemblyInfo.cs  AssemblyInfo.cs.in  AttributeTree.cs  AttributeTreeCollection.cs  AuditMessageArgs.cs  AuditMessageHandler.cs  AuditSeverityArgs.cs  AuditSeverityHandler.cs  Auditable.cs  ConfigStorage.cs  ConsoleLogger.cs  Entropy.cs  IAuditable.cs  IEntropy.cs  ITickable.cs  InvalidPathException.cs  MersenneEntropy.cs  MersenneTwister.cs  MfConvert.cs  MfGames.4.5.resharper  MfGames.6.0.ReSharper  MfGames.nuspec  MfGames.sln  MfGames.sln.DotSettings  MimeFilenameIdentifier.cs  NestedAuditable.cs  NodeRef.cs  NotAbsolutePathException.cs  SecondGuage.cs  Severity.cs  TickManager.cs  TypeChooser.cs  UtilityException.cs  ValueTree.cs  Version.cs  WeightedSelector.cs
vc7.1/: MfGames.Utility.csproj  mfgames-utility.sln  mfgames-utility_Model.tgs
vc7.1-nunit/: MfGames.Utility.NunitTest.Debug.nunit  MfGames.Utility.NunitTest.csproj  MfGames.Utility.NunitTest.sln  MfGames.Utility.NunitTest_Model.tgs
(+353 files in other folders)
